Fix double spacing issue

--- a/css/psdi-common.css
+++ b/css/psdi-common.css
@@ -412,7 +412,8 @@ h6 {
 }
 
 p {
-  margin: 0 0 1.25rem 0;
+  margin        : 0 0 1.25rem 0;
+  padding-bottom: 0;
 }
 
 .text--center {
